# ros2-llm-mission-control

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  explored_map.data  requirements.txt
.devcontainer/: devcontainer.json
missions/: 20260707_065740_perimeter_patrol.json  20260711_084241_unnamed_mission.json  20260714_064845_thorough_warehouse_exploration.json  20260714_132036_unnamed_mission.json  20260715_170250_follow_red_target.json  20260716_125033_unnamed_mission.json  20260716_125815_follow_red_box.json  20260716_134055_unnamed_mission.json  20260716_162137_perimeter_patrol.json  20260716_164149_unnamed_mission.json  20260716_164817_unnamed_mission.json  20260716_165944_unnamed_mission.json  20260716_173520_follow_red_box.json  20260716_173803_unnamed_mission.json  20260716_174021_follow_red_box.json  20260716_174452_unnamed_mission.json  20260716_175120_unnamed_mission.json
src/inspector_bot/: CMakeLists.txt  package.xml
src/inspector_bot/config/: controllers.yaml  custom_nav_tree.xml  nav2_params.yaml  slam_params.yaml
src/inspector_bot/launch/: explore_bringup.launch.py  launch_robot.launch.py  master_bringup.launch.py  sim_robot.launch.py  vision_bringup.launch.py
src/inspector_bot/maps/: warehouse_map.pgm  warehouse_map.yaml
src/inspector_bot/models/cargo_box/: model.sdf
src/inspector_bot/models/red_target/: model.sdf
src/inspector_bot/rviz/: production.rviz
src/inspector_bot/src/: first_node.cpp  inspector_node.cpp
src/inspector_bot/urdf/: inspector_bot.urdf.xacro
src/inspector_interfaces/: CMakeLists.txt  package.xml
src/inspector_interfaces/action/: LocateTarget.action
src/inspector_llm/: package.xml  setup.cfg  setup.py
src/inspector_llm/inspector_llm/: frontier_explorer.py  llm_bridge.py  mission_executor.py  mission_validator.py  target_mover.py  vision_detector.py  visual_follower.py
src/inspector_llm/inspector_llm/schemas/: mission_schema.json
src/inspector_llm/missions/: test_bad_coords.json  test_bad_schema.json  test_explore.json  test_valid.json  test_vision.json
src/inspector_vision/: CMakeLists.txt  package.xml  plugins.xml
src/inspector_vision/src/: locate_target_bt_node.cpp  target_locator.cpp
